--- a/examsys/templates/home.html
+++ b/examsys/templates/home.html
@@ -60,15 +60,13 @@
       <form  method="post" action="/sendans">
         {% csrf_token %}
         {% for q in ques %}
-        <!-- {{q.question_cat}} -->
         <div class="form-group">
           <label for="exampleInputEmail1">{{q.question_name}}</label>
           
           {% for a in ans %}
-          <!-- {{a.question_cat_id }} -->
           {% if a.question_cat_id == q.question_cat %}
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="ansval[]" id="exampleRadios2" value="{{a.id}}_{{q.question_cat}}">
+            <input class="form-check-input" type="checkbox" name="ansval[]" id="exampleRadios2" value="{{a.id}}_{{q.question_cat}}_{{a.currect_ans}}">
             <label class="form-check-label" for="exampleRadios2">
               {{a.answer_choice}}
             </label>
@@ -123,8 +121,7 @@
       //console.log(parseInt(seconds))
       //console.log(parseInt(minutes))
       if (parseInt(minutes) == 0 && parseInt(seconds) == 0) {
-        //alert('hello');
-        console.log('hello');
+        location.href='/sendans';
       }
       window.localStorage.setItem("seconds", seconds)
       window.localStorage.setItem("minutes", minutes)
